<resources>
    <string name="app_name">RunnersEdge</string>
    <string name="logo_text">Logo</string>
    <string name="continue_text">Touch anywhere to continue</string>
    <string name="action_settings">Settings</string>
    <string name="startButtonTextView">START</string>
    <string name="title_activity_bluetooth_setup">BluetoothSetupActivity</string>
    <string name="paired_devices_text">Paired Devices</string>
    <string name="dataString">DATA</string>
    <string name="title_activity_run">RunActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="forceTextView">BEGIN RUN:</string>
    <string name="runInstructTextView">When finished, press STOP button.</string>
    <string name="stopRunButtonTextView">STOP</string>
    <string name="title_activity_data_view">DataViewActivity</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>
    <string name="profileInfoPromptTextView">Hello. Please enter your name and weight.</string>
    <string name="weightPromptTextView">Weight:</string>
    <string name="namePromptTextView">Name:</string>
    <string name="kg">kg</string>
    <string name="ok">OK</string>
    <string name="title_activity_run_async">RunAsyncActivity</string>
    <string name="title_activity_run_results">RunResultsActivity</string>
    <string name="greatestImpactTextView">Highest Impact Force:</string>
    <string name="averageImpactForceTextView">Average Impact Force:</string>
    <string name="graphButtonTextView">View Data Graph</string>
    <string name="cadenceTextView">Cadence:</string>
    <string name="rings">rings</string>
</resources>
